--- a/efsblog/portfolio/templates/portfolio/investment_list.html
+++ b/efsblog/portfolio/templates/portfolio/investment_list.html
@@ -35,11 +35,12 @@
             <thead>
             <tr class="bg-info">
                 <th>Customer</th>
-                <th>Symbol</th>
-                <th>Name</th>
-                <th>Shares</th>
-                <th>Purchase Price</th>
-                <th>Purchase Date</th>
+                <th>Category</th>
+                <th>Description</th>
+                <th>Acquired Value</th>
+                <th>Acquired Date</th>
+                <th>Recent Value</th>
+                <th>Recent Date</th>
                 <th colspan="3">Actions</th>
             </tr>
             </thead>
